--- a/index.css
+++ b/index.css
@@ -107,3 +107,11 @@ body {
 .mastfoot {
     color: rgba(255, 255, 255, .5);
 }
+
+.hidden {
+    display: none;
+}
+
+.show {
+    display: block;
+}
